--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.0",
-    "lucide-react": "^0.555.0",
     "react": "^19.2.0",
-    "react-leaflet": "^5.0.0",
-    "leaflet": "^1.9.4"
+    "leaflet": "1.9.4",
+    "react-leaflet": "4.2.1",
+    "lucide-react": "0.292.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
