--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "leaflet": "1.9.4",
     "react-leaflet": "4.2.1",
-    "lucide-react": "0.292.0",
-    "react-dom": "^19.2.0"
+    "lucide-react": "^0.555.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
